--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Demeter Farming calculator</title>
     <link
       rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+    <link
+      rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,600,700"
     />
     <link
@@ -17,5 +21,18 @@
   <body>
     <div id="app"></div>
     <script type="module" src="/src/main.js"></script>
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-2396FER7QJ"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-2396FER7QJ");
+    </script>
   </body>
 </html>
