--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Demeter Farming calculator</title>
+    <title>Demeter Farming & Polkaswap calculator</title>
+    <link rel="icon" type="image/png" href="/deocalc.png" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
