--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>Demeter Farming & Polkaswap calculator</title>
     <link rel="icon" type="image/png" href="/deocalc.png" />
     <link
+      rel="preload"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      as="style"
+    />
+    <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
